public/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html,
body {
  margin: 0;
  padding: 0;
}

*,
p,
label,
button,
option,
select,
input,
a {
  font-family: "Khula", sans-serif;
}

body {
  background: linear-gradient(
    90deg,
    hsla(359, 73%, 87%, 1) 0%,
    hsla(0, 0%, 100%, 1) 60%
  );

  background: -moz-linear-gradient(
    90deg,
    hsla(359, 73%, 87%, 1) 0%,
    hsla(0, 0%, 100%, 1) 60%
  );

  background: -webkit-linear-gradient(
    90deg,
    hsla(359, 73%, 87%, 1) 0%,
    hsla(0, 0%, 100%, 1) 60%
  );

  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F6C5C6", endColorstr="#FFFFFF", GradientType=1 );
}

h1 {
  font-size: 5em;
  font-family: "Josefin Slab", serif;
}

h2 {
  font-family: "Work Sans", sans-serif;
  font-size: 1.5em;
}

a.itemLink,
a.itemLink:visited {
  color: #2a2b2a;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

button {
  margin: 0 5px;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  padding: 10px;
  margin: 0;
  cursor: pointer;
}

button:enabled:hover {
  color: aliceblue;
  background-color: #507dbc;
}

button:disabled {
  border: 0;
  border: 1px solid rgb(158, 149, 149);
}

input {
  height: 40px;
  border: 1px solid gray;
}

textarea {
  border: 1px solid gray;
}

label {
  display: flex;
  align-items: center;
}

.headerNav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 35%;
  padding: 0 30px;
  text-align: center;
  color: #f6c7c7;
  background-color: #f12b6b;
  border: 2px solid #f12b6b;
  margin-right: 15px;
  border-radius: 10px;
  text-decoration: none;
  font-size: 1.1em;
}

.headerNav:hover,
button.headerNav:hover {
  color: #f12b6b;
  background-color: #f6c7c7;
}

#profileBtn {
  padding: 8px 30px;
}

.headerLink,
.headerLink:active {
  color: #2a2b2a;
  text-decoration: none;
  padding: 10px 0;
}

.headerLink:hover {
  color: #f6c7c7;
  background-color: #f12b6b;
}

#headerCart {
  border: none;
  color: #f6c7c7;
  padding: 8px 30px;
}

#headerCart:hover {
  color: #f12b6b;
}

.headerDropdown {
  position: absolute;
  top: 140%;
  left: 0%;
  flex-direction: column;
  text-align: center;
  width: 100%;
  border: #f12b6b 2px solid;
  border-radius: 10px;
  background-color: #f6c7c7;
}

.dropdownListing,
.dropdownListing:hover {
  color: #2a2b2a;
  text-decoration: none;
}

.dropdownListing:hover {
  background-color: #a1c6ea;
}

.iconPreAnim {
  color: #f6c7c7;
  position: absolute;
  animation: iconAnim 300ms ease-in-out;
  opacity: 0;
  transform: translate(5px, -3px);
}

@keyframes iconAnim {
  0% {
    transform: translate(5px, -20px);
  }
  20%,
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translate(5px, -3px);
  }
}
.contactBtn {
  padding: 15px;
  font-size: 1.1em;
}

#cartCount {
  position: absolute;
  bottom: -50%;
  right: 0%;
  background-color: #f6c7c7;
  padding: 5px 8px;
  border-radius: 10px;
  color: #f12b6b;
  border: 2px solid #f12b6b;
}

.profileInfo {
  max-height: 0;
  transition: all 300ms ease-in-out;
  overflow: hidden;
}

.profileInfoCollapsed {
  transition: all 300ms ease-in-out;
}

.profileInfoExpanded {
  max-height: 1000px;
  transition: all 300ms ease-in-out 500ms;
}

.profileForm {
  max-height: 0;
  transition: all 300ms ease-in-out;
  overflow: hidden;
}

.profileFormCollapsed {
  transition: all 300ms ease-in-out;
}

.profileFormExpanded {
  max-height: 1000px;
  transition: all 300ms ease-in-out 500ms;
}

#shopHome {
  display: flex;
  flex-direction: column;
}

.shopSideBar {
  min-height: 80vh;
  width: 13%;
  background-color: white;
  padding: 20px;
  margin-left: 7%;
  margin-right: 5%;
  margin-bottom: 25px;
  border-radius: 5px;
}

.shopSections {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  margin-top: 30px;
  margin-bottom: 50px;
}

.bannerBorder {
  min-height: 1px;
  background-color: #2a2b2a;
}

.storeNav {
  width: 100%;
  transition: all 1s;
  overflow: hidden;
  opacity: 0;
  max-height: 0;
}

.expandedStoreNav {
  opacity: 1;
  margin: 0;
}

.storeNavButton {
  display: flex;
  justify-content: space-between;
  width: 100%;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  padding: 10px;
  margin: 0;
  cursor: pointer;
}

.storeNavButton::after {
  content: "\25be";
  transform: scale(1.5) translateY(-1px);
  transition: transform 300ms linear;
}

.expandedStoreNavButton::after {
  transform: scale(1.5) rotate(60deg);
}

#shopNavList {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
}

.navLink,
.navLink:active,
.navLink > a:visited {
  color: #2a2b2a;
}

.clearTagBtn {
  margin-left: 5px;
}

.deleteTagBtn:hover {
  text-shadow: 0 0 2px white;
}

.tagCheckBox {
  cursor: pointer;
}

.shelfContainer {
  margin-right: 3%;
}

.itemListing {
  padding: 10px;
  margin: 5px;
  list-style: none;
  border-radius: 10px;
  border: 3px solid transparent;
}

.itemListingImg {
  width: 200px;
  height: auto;
  border-radius: 20px;
  margin-bottom: 20px;
}

.itemListingName {
  position: relative;
}

.itemListingFullName {
  position: absolute;
  top: -10px;
  background-color: rgba(80, 76, 76, 0.9);
  opacity: 0;
  transition: opacity 200ms linear;
  padding: 10px;
  border: 2px rgba(34, 32, 32, 1) solid;
  border-radius: 5px;
  color: #f8fffd;
  width: 80%;
  text-align: center;
}

.itemListingName:hover .itemListingFullName {
  opacity: 1;
}

.quickMenu {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  height: 89%;
  width: 100%;
  opacity: 0;
  transition: opacity 250ms linear;
  background-color: #2a2b2a80;
  border-radius: 20px;
}

.quickMenu:hover {
  opacity: 1;
}

.wishAddedBtn {
  color: #f12b6b;
  background-color: #507dbc;
}

.itemListing:hover {
  filter: drop-shadow(0 0 10px #606160);
}

.listingImgContainer {
  display: static;
  position: relative;
}

.inCartIconContainer {
  display: flex;
  background-color: #f3aeae;
  color: white;
  padding: 7px;
  border-radius: 3px;
  position: absolute;
  right: -5%;
  bottom: 8%;
}

.heroImg {
  position: relative;
}

.heroText {
  position: absolute;
  left: 40%;
  bottom: 0;
  text-align: center;
  font-size: 3em;
  color: white;
}

.bannerText {
  position: absolute;
  top: 15%;
  left: 0%;
  width: 100%;
  text-align: center;
}

.banner {
  text-shadow: 10 10 15px black;
}

.banner:hover {
  text-shadow: 0 0 15px white;
}

.bannerText {
  font-weight: bolder;
}

.shopPage {
  display: flex;
  min-height: 100vh;
}

.pageNav {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: auto;
  margin-bottom: 30px;
}

.pgBtn {
  margin: 0 5px;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  margin: 0;
  cursor: pointer;
}

#pageSelect {
  appearance: none;
  background-color: inherit;
  border: 0;
  width: 100%;
  height: 100%;
  padding: 10px;
  cursor: pointer;
}

#pageSelect:hover {
  background-color: #507dbc;
  color: aliceblue;
}

.itemPageContainer {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  min-width: 80vw;
  max-width: 80vw;
  margin-left: 10vw;
  margin-top: 100px;
}

.itemPage {
  min-width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  grid-template-areas: "img info";
  margin-bottom: 50px;
}

.itemPageImg {
  max-height: 400px;
  width: auto;
  grid-area: img;
  align-self: end;
  justify-self: center;
  padding: 10px;
}

.itemInfo {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-width: 700px;
  height: 100%;
  padding: 10px;
  grid-area: info;
  align-self: start;
  justify-self: start;
}

.recommendationsContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 2px solid #ddfff7;
  background-color: #ddfff7;
  border-radius: 20px;
  margin: 20px auto;
  padding: 10px 50px;
}

.recommendations {
  display: flex;
}

.cartListing:nth-child(odd) {
  background-color: #ddfff750;
}

.cartListing:hover {
  background-color: #ddfff7;
}

#cartComment {
  text-decoration: none;
  color: #2a2b2a;
}

#cartComment::active {
  color: #2a2b2a;
}

#cartComment:hover {
  text-decoration: underline;
}

.emptyCartLink:hover {
  text-shadow: 0 0 2px #a1c6ea;
}

#checkoutForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-basis: 800px;
  margin-top: 50px;
  max-width: 800px;
}

#orderContainer {
  width: 60vw;
  margin-top: 70px;
  margin-left: 20vw;
}

.orderDetailBtn {
  width: 100%;
}

.orderDetail {
  transition: all 1s;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

footer,
.footerLink {
  color: #f6c7c7;
}

.socialMediaLink {
  color: #3b6192;
  padding: 0 10px;
}

.socialMediaLink:hover {
  color: #507dbc;
  filter: drop-shadow(0 0 2px #5c90da);
}

.socialMediaLinkDark {
  color: #f6c7c7;
  padding: 0 10px;
}

.socialMediaLinkDark:hover {
  filter: drop-shadow(0 0 2px #f6c7c7);
}

.contactBtn:enabled:hover {
  color: #2a2b2a;
  background-color: aliceblue;
  filter: drop-shadow(0 0 2px aliceblue);
}

